EPBDS-1988 roll back all fixes